--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,1 @@
-alabaster==0.7.13
-Babel==2.12.1
-certifi==2023.5.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-cryptography==41.0.1
-dill==0.3.6
-docutils==0.18.1
-idna==3.4
-imagesize==1.4.1
-iniconfig==2.0.0
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-mpmath==1.3.0
-ntlm-auth==1.5.0
-numpy==1.23.5
-packaging==23.1
-pbr==5.11.1
-pluggy==1.0.0
-ply==3.11
-psutil==5.9.5
-pycparser==2.21
-Pygments==2.15.1
-pytest==7.3.2
-python-dateutil==2.8.2
-qiskit==0.43.1
-qiskit-aer==0.12.0
-qiskit-ibmq-provider==0.20.2
-qiskit-terra==0.24.1
-requests==2.31.0
-requests-ntlm==1.1.0
-rustworkx==0.13.0
-scipy==1.10.1
-six==1.16.0
-snowballstemmer==2.2.0
-Sphinx==6.2.1
-sphinx-rtd-theme==1.2.2
-sphinxcontrib-applehelp==1.0.4
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.1
-sphinxcontrib-jquery==4.1
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
-stevedore==5.1.0
-symengine==0.9.2
-sympy==1.12
-urllib3==2.0.3
-websocket-client==1.5.3
-websockets==11.0.3
+qiskit>=0.43.1
