--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ classifiers = [
     "License :: OSI Approved :: GNU General Public License (GPL)",
     "Operating System :: OS Independent"
 ]
+dependencies = [
+  'qiskit >= 0.43.1'
+]
 # [project.urls]
 # "Homepage" = "https://github.com/g33kex/
 
