--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ pytest = "^8.0.1"
 sphinx = "^7.2.6"
 sphinx-rtd-theme = "^2.0.0"
 qiskit-aer = "^0.13.3"
+qiskit-algorithms = "^0.3.0"
 
 [tool.poetry.extras]
 simulate = ["qiskit_aer"]
